--- a/src/app/component/about/about.html
+++ b/src/app/component/about/about.html
@@ -8,8 +8,8 @@
        
         <div style="height: 2730px;">
             <div class="style__page___ZJiyd template-page">
-                <figure class="style__loaded___1DGoC style__vignette___2Ah3- style__fixed___3zjcA style__poster___2yJev" style="width: 1366px; height: 221.4px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-                    <div class="style__image___1zbYM" style="background-image: url(&quot;/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg&quot;); opacity: 1; width: 1366px; height: 683px; top: -230px; left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px 683px; filter: blur(0px);"><img src="/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg"></div>
+                <figure class="style__loaded___1DGoC style__vignette___2Ah3- style__fixed___3zjcA style__poster___2yJev" style="width: 1366px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
+                    <div class="style__image___1zbYM" style="background-image: url(&quot;/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg&quot;); opacity: 1; width: 1366px;  left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px 683px; filter: blur(0px);"><img src="/api/cache/large___storage___db___portfolio___pages___02 - about___poster.jpg"></div>
                     <div class="style__gradient___1apzF"></div>
                 </figure>
                 <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
