--- a/src/app/component/home/home.html
+++ b/src/app/component/home/home.html
@@ -9,8 +9,8 @@
       
     <div style="height: 962px;">
       <div class="style__page___ZJiyd template-home">
-        <figure class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" style="width: 1366px; height: 343px; opacity: 1; transform: translate3d(0px, 0px, 0px);">
-          <div class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px; height: 911px; top: -284px; left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px 911px; filter: blur(0px);"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
+        <figure class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" style="width: 1366px;  opacity: 1; transform: translate3d(0px, 0px, 0px);">
+          <div class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
         </figure>
         <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
           <div class="style__mainWrapper___2eAnb">
@@ -30,13 +30,13 @@
                   <div class="style__text___MsVYo">
                     <p><strong>Cheers</strong>
                       <!-- react-text: 60 -->, I am Fabian,
-                      <!-- /react-text --><br><strong>Interactive Developer</strong>
+                      <!-- /react-text --> <strong>Interactive Developer</strong>
                       <!-- react-text: 63 -->,
-                      <!-- /react-text --><br><strong>jury member</strong>
+                      <!-- /react-text --> <strong>jury member</strong>
                       <!-- react-text: 66 -->at
                       <!-- /react-text --><a href="http://awwwards.com">awwwards</a>
                       <!-- react-text: 68 -->
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 70 -->and founder of
                       <!-- /react-text --><a href="http://momate.at">Momate</a>
                       <!-- react-text: 72 -->.
@@ -44,11 +44,11 @@
                     </p>
                     <p>
                       <!-- react-text: 74 -->You are currently
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 76 -->looking at
                       <!-- /react-text --><strong>my site</strong>
                       <!-- react-text: 78 -->,
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 80 -->that
                       <!-- /react-text -->
                       <!-- react-text: 81 -->'
@@ -64,22 +64,22 @@
                       <!-- react-text: 87 -->*
                       <!-- /react-text -->
                       <!-- react-text: 88 -->
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 90 -->and
                       <!-- /react-text --><strong>Dropbox</strong>
                       <!-- react-text: 92 -->as
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 94 -->a content manager.
-                      <!-- /react-text --><br><em><!-- react-text: 97 -->*<!-- /react-text --><!-- react-text: 98 --> redux, react router, babel, webpack,<!-- /react-text --><br><!-- react-text: 100 -->grunt, gsap, rucksack, autoprefixer,<!-- /react-text --><br><!-- react-text: 102 -->postcss, css modules, masonry and<!-- /react-text --><br><!-- react-text: 104 -->some other magic stuff.<!-- /react-text --></em></p>
+                      <!-- /react-text --> <em><!-- react-text: 97 -->*<!-- /react-text --><!-- react-text: 98 --> redux, react router, babel, webpack,<!-- /react-text --> <!-- react-text: 100 -->grunt, gsap, rucksack, autoprefixer,<!-- /react-text --> <!-- react-text: 102 -->postcss, css modules, masonry and<!-- /react-text --> <!-- react-text: 104 -->some other magic stuff.<!-- /react-text --></em></p>
                     <p>
                       <!-- react-text: 106 -->Pretty neat, huh?
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 108 -->If you
                       <!-- /react-text --><strong>fancy a chat</strong>
                       <!-- react-text: 110 -->,
-                      <!-- /react-text --><br>
+                      <!-- /react-text --> 
                       <!-- react-text: 112 -->drop me a line at
-                      <!-- /react-text --><br><a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
+                      <!-- /react-text --> <a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
                     <p><strong><!-- react-text: 117 -->Stay bold <!-- /react-text --><!-- react-text: 118 -->&amp;<!-- /react-text --></strong></p>
                   </div>
                 </section>
