--- a/src/app/component/portfolio/portfolio.html
+++ b/src/app/component/portfolio/portfolio.html
@@ -13,7 +13,7 @@
 			</div>
 
 		</div>
-		<div class="item formstudio delay-1 hoverable" style="overflow: hidden;">
+		<div class="item formstudio delay-1 hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>4m Studio</h2>
@@ -47,7 +47,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="item logosoftheworld delay-2 hoverable" style="overflow: hidden;">
+		<div class="item logosoftheworld delay-2 hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>Logos of<span class="break"><br></span> the World</h2>
@@ -70,7 +70,7 @@
 				</div>
 			</div>
 		</div>
-		<div class="item revoltcms delay-3 hoverable" style="overflow: hidden;">
+		<div class="item revoltcms delay-3 hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>Revolt<span class="break"><br></span> CMS</h2>
@@ -101,7 +101,7 @@
 			</div>
 		</div>
 
-		<div class="item marina hoverable" style="overflow: hidden;">
+		<div class="item marina hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>Marina Vlaykova</h2>
@@ -112,7 +112,7 @@
 			</div>
 		</div>
 
-		<div class="item saifdesign hoverable" style="overflow: hidden;">
+		<div class="item saifdesign hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>Saif Design</h2>
@@ -122,7 +122,7 @@
 			</div>
 		</div>
 
-		<div class="item mirohristov hoverable" style="overflow: hidden;">
+		<div class="item mirohristov hoverable normal" style="overflow: hidden;">
 			<div class="bg"></div>
 			<div class="info">
 			<h2>Miro Hristov //ARCHIVE</h2>
