--- a/src/app/component/home/home.html
+++ b/src/app/component/home/home.html
@@ -9,8 +9,9 @@
       
     <div style="height: 962px;">
       <div class="style__page___ZJiyd template-home">
-        <figure class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" style="width: 1366px;  opacity: 1; transform: translate3d(0px, 0px, 0px);">
-          <div class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
+        <figure [@moveBgImageSection]="state" class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" 
+        style="width: 1366px;">
+          <div [@moveBgImage]='state'  class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
         </figure>
         <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
           <div class="style__mainWrapper___2eAnb">
@@ -104,4 +105,5 @@
         </section>
       </div>
     </div>
+    
   </div>
