--- a/src/app/component/skills/skills.css
+++ b/src/app/component/skills/skills.css
@@ -1989,7 +1989,7 @@ h2 {
     height: 1px;
     width: 0;
     opacity: 0;
-    background: #27B6FF;
+    background:#b3a577;
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
     -ms-transition: 0.5s;
