--- a/src/app/component/skills/skills.html
+++ b/src/app/component/skills/skills.html
@@ -1,6 +1,11 @@
-<div id="about" class=""><div class="spacer"></div>
+<div id="about"  class="">
+	<div class="spacer"></div>
 		<div class="no-bg"></div>
 
+         <figure [@moveBgImageSection]="state" class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" 
+        style="width: 1366px;">
+          <div [@moveBgImage]='state'  class="style__image___1zbYM" style="background-image: url(&quot;api/cache/profile.jpg&quot;); opacity: 0.5; width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/profile.jpg"></div>
+        </figure>
 		<section class="column visible">
 			<h2>About</h2>
 			<div class="sep delay-5"></div>
