WEBSITE UI changes

--- a/src/app/component/home/home.html
+++ b/src/app/component/home/home.html
@@ -11,7 +11,7 @@
       <div class="style__page___ZJiyd template-home">
         <figure [@moveBgImageSection]="state" class="style__loaded___1DGoC style__fixed___3zjcA style__poster___2yJev" 
         style="width: 1366px;">
-          <div [@moveBgImage]='state'  class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;); opacity: 0.5; width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
+          <div [@moveBgImage]='state'  class="style__image___1zbYM" style="background-image: url(&quot;api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg&quot;);  width: 1366px;   left: 0px; transform: translate3d(0px, 0px, 0px) scale(1); background-size: 1366px; filter: blur(0px);background-size:cover;"><img src="api/cache/large___storage___db___portfolio___pages___01 - home___poster.jpg"></div>
         </figure>
         <section class="main-wrapper style__main___1KuTD style__hasPoster___3P6NN">
           <div class="style__mainWrapper___2eAnb">
@@ -27,7 +27,7 @@
                 </h2>
               </section>
               <div>
-                <section class="grid__container___3goUT grid__shortContainer___2zTyv">
+                <section class="grid__container___3goUT grid__shortContainer___2zTyv column visible">
                   <div class="style__text___MsVYo">
                     <p><strong>Cheers</strong>
                       <!-- react-text: 60 -->, I am Fabian,
@@ -43,45 +43,13 @@
                       <!-- react-text: 72 -->.
                       <!-- /react-text -->
                     </p>
-                    <p>
-                      <!-- react-text: 74 -->You are currently
-                      <!-- /react-text --> 
-                      <!-- react-text: 76 -->looking at
-                      <!-- /react-text --><strong>my site</strong>
-                      <!-- react-text: 78 -->,
-                      <!-- /react-text --> 
-                      <!-- react-text: 80 -->that
-                      <!-- /react-text -->
-                      <!-- react-text: 81 -->'
-                      <!-- /react-text -->
-                      <!-- react-text: 82 -->s awesome.
-                      <!-- /react-text -->
-                    </p>
-                    <p>
-                      <!-- react-text: 84 -->This site uses
-                      <!-- /react-text --><strong>React</strong>
-                      <!-- react-text: 86 -->
-                      <!-- /react-text -->
-                      <!-- react-text: 87 -->*
-                      <!-- /react-text -->
-                      <!-- react-text: 88 -->
-                      <!-- /react-text --> 
-                      <!-- react-text: 90 -->and
-                      <!-- /react-text --><strong>Dropbox</strong>
-                      <!-- react-text: 92 -->as
-                      <!-- /react-text --> 
-                      <!-- react-text: 94 -->a content manager.
-                      <!-- /react-text --> <em><!-- react-text: 97 -->*<!-- /react-text --><!-- react-text: 98 --> redux, react router, babel, webpack,<!-- /react-text --> <!-- react-text: 100 -->grunt, gsap, rucksack, autoprefixer,<!-- /react-text --> <!-- react-text: 102 -->postcss, css modules, masonry and<!-- /react-text --> <!-- react-text: 104 -->some other magic stuff.<!-- /react-text --></em></p>
-                    <p>
-                      <!-- react-text: 106 -->Pretty neat, huh?
-                      <!-- /react-text --> 
-                      <!-- react-text: 108 -->If you
-                      <!-- /react-text --><strong>fancy a chat</strong>
-                      <!-- react-text: 110 -->,
-                      <!-- /react-text --> 
-                      <!-- react-text: 112 -->drop me a line at
-                      <!-- /react-text --> <a href="mailto:info@fabianirsara.com?Subject=Cheers">info@fabianirsara.com</a></p>
-                    <p><strong><!-- react-text: 117 -->Stay bold <!-- /react-text --><!-- react-text: 118 -->&amp;<!-- /react-text --></strong></p>
+                    <div class="sep delay-5"></div>
+                     <p>
+                       You are currently looking at <strong> my site</strong>, that's awesome.This site uses<strong> React</strong> * and <strong>Dropbox</strong> as a content manager.
+                       * redux, react router, babel, webpack, grunt, gsap, rucksack, autoprefixer, postcss, css modules, masonry and some other magic stuff.
+                        Pretty neat, huh? If you fancy a chat, drop me a line at info@fabianirsara.com
+                     </p>
+                    <div class="sep delay-7"></div>
                   </div>
                 </section>
               </div>
